# VedioGenProject

./: AGENTS.md  BLOCKERS.md  NEXT_STEP.md  STATUS.md
code/client/qt_wan_chat/: CMakeLists.txt
code/client/qt_wan_chat/src/: ApiClient.cpp  ApiClient.h  MainWindow.cpp  MainWindow.h  main.cpp
code/client/qt_wan_chat/src/models/: TaskModels.h
code/client/qt_wan_chat/src/utils/: WslPathUtils.cpp  WslPathUtils.h
code/client/qt_wan_chat/tools/: package_windows.ps1
code/server/wan_local_service/: .env.example  .gitignore  README_WAN_LOCAL_SERVICE.md  requirements-service.txt
code/server/wan_local_service/app/: __init__.py  comfyui_backend.py  comfyui_manager.py  comfyui_workflow.py  config.py  db.py  env_report.py  errors.py  main.py  progress.py  repository.py  schemas.py  task_backend.py  task_runner.py  task_runtime.py  wan_runner.py
code/server/wan_local_service/patches/: wan2.2_attention_sdpa_fallback.patch
code/server/wan_local_service/scripts/: build_flash_attn_resumable.sh  check_env.sh  run_comfyui.sh  run_sample_i2v.sh  run_sample_t2v.sh  run_service.sh  setup_comfyui.sh  setup_wan22.sh
code/server/wan_local_service/tests/: conftest.py  test_api.py  test_comfyui_integration.py  test_comfyui_manager.py  test_comfyui_workflow.py  test_config.py  test_repository.py  test_task_runner.py  test_wan_runner.py
code/server/wan_local_service/workflows/: wan22_i2v_a14b_lowvram_template.json
docs/reports/integration/: mvp_windows_wsl_integration.md  wan_local_service_api_contract.md
docs/reports/self_test/client/: 2026-04-24_client_i2v_image_input.md  2026-04-24_client_progress_polling_update.md  2026-04-24_client_result_download_and_video_list.md  2026-04-24_client_ui_simplification.md  2026-04-25_client_auto_release_packaging.md  2026-04-25_client_chat_progress_eta.md  2026-04-25_client_server_delete_task_api.md  2026-04-25_client_task_and_video_deletion.md  2026-04-25_client_thumbnail_stale_frame_fix.md  2026-04-25_client_toolbar_and_task_thumbnails.md  2026-05-05_client_i2v_14b_contract.md  mvp_client_self_test.md
docs/reports/self_test/server/: 2026-04-24_flash_attn_resume_snapshot.md  2026-04-24_i2v_upload_protocol.md  2026-04-24_realtime_progress_protocol.md  2026-04-24_result_download_api.md  2026-04-24_sdpa_fallback_running_task.md  2026-04-24_server_recovery_and_observability.md  2026-04-25_delete_task_api.md  mvp_server_self_test.md
